# MarketSignalSources

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish-platform-handoffs.yml
docs/: platform_consumption_contract.md  platform_signal_source_architecture.md
scripts/: gate_codex_app_review.py  publish_ibit_btc_platform_handoff.py  run_codex_pr_review.py
src/market_signal_sources/: __init__.py
src/market_signal_sources/artifacts/: __init__.py  consumer_contracts.py  consumption.py  platform_handoff.py  publication.py  quality_report.py  research_export.py  research_handoff.py  signal_bundle.py  source_catalog.py  validation.py
src/market_signal_sources/cli/: audit_signal_consumption.py  build_btc_cycle_bundle.py  build_daily_technical_bundle.py  build_platform_handoff.py  build_research_handoff.py  build_semiconductor_rotation_bundle.py  export_btc_cycle_research_csv.py  export_us_equity_context_research_csv.py  export_us_equity_price_proxy_research_csv.py  export_us_equity_public_context_research_csv.py  list_consumer_contracts.py  list_signal_ownership_matrix.py  list_signal_source_families.py  publish_platform_signal_handoff.py  validate_quality_report.py  validate_research_export.py  validate_signal_bundle.py
src/market_signal_sources/derived/: technical_indicators.py
src/market_signal_sources/derived/crypto/: __init__.py  btc_cycle.py
src/market_signal_sources/derived/us_equity/: __init__.py  nasdaq_sp500_context.py  semiconductor_rotation.py
src/market_signal_sources/providers/: __init__.py  local_csv.py
tests/: test_btc_cycle_bundle.py  test_cli_entrypoints.py  test_gate_codex_app_review.py  test_publish_ibit_btc_platform_handoff.py  test_signal_publication.py
