[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-signal-sources"
version = "0.1.0"
description = "Artifact-first market signal source builders for QuantStrategyLab strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.scripts]
build-btc-cycle-bundle = "market_signal_sources.cli.build_btc_cycle_bundle:main"
validate-signal-bundle = "market_signal_sources.cli.validate_signal_bundle:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
