[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-signal-sources"
version = "0.1.0"
description = "Artifact-first market signal source builders for QuantStrategyLab strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.scripts]
audit-signal-consumption = "market_signal_sources.cli.audit_signal_consumption:main"
build-btc-cycle-bundle = "market_signal_sources.cli.build_btc_cycle_bundle:main"
build-research-handoff = "market_signal_sources.cli.build_research_handoff:main"
export-btc-cycle-research-csv = "market_signal_sources.cli.export_btc_cycle_research_csv:main"
export-us-equity-context-research-csv = "market_signal_sources.cli.export_us_equity_context_research_csv:main"
export-us-equity-public-context-research-csv = "market_signal_sources.cli.export_us_equity_public_context_research_csv:main"
list-signal-consumer-contracts = "market_signal_sources.cli.list_consumer_contracts:main"
validate-research-export = "market_signal_sources.cli.validate_research_export:main"
validate-signal-bundle = "market_signal_sources.cli.validate_signal_bundle:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
